# building-llm-from-scratch

./: .gitignore  pyproject.toml
ch02/: BytePairEncoding.py  GPTDatasetV1.py  SimpleTokenizer.py  SlidingWindow.py
ch03/: SelfAttentionWithoutTrainableWeights.py
