[project]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "rockjoon",email = "rockpago@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
