[project]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "rockjoon",email = "rockpago@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)",
    "torch (==2.2.2)",
    "numpy (>=2.2.4,<3.0.0)",
]
[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
pybind11 = "^2.13.6"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
